@@ -61,6 +61,7 @@ Fixed bugs
 
 Miscellaneous
 -------------
+- checks in debug mode that clean buffer memory is really clean when being freed are now disabled by default
 
 Known bugs
 ----------
